--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,8 +9,8 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "README.md",
-            "mode": "source"
+            "file": "niveau2/Ticketmeester.md",
+            "mode": "preview"
           }
         }
       }
@@ -68,7 +68,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "README.md",
+                "file": "niveau2/Ticketmeester.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -88,15 +88,15 @@
   },
   "active": "230dc48947620462",
   "lastOpenFiles": [
+    "niveau2/Ticketmeester.md",
+    "niveau2/Boodschappenlijst.md",
     "README.md",
-    "niveau2/WieVanDeDrie.md",
-    "niveau2/RaadHetNummer.md",
-    "niveau2/Muziekspeler.md",
+    "niveau2/Boodschappen.md",
+    "niveau2/GokjeWagen.md",
+    "niveau1/Kaartspel.md",
     "niveau2/MovingCharacter.md",
     "niveau2/Filter.md",
-    "niveau2/Clock.md",
-    "niveau1/Rekenmachine.md",
-    "niveau1/QuoteOfTheDay.md",
-    "images/Quote-ui.png"
+    "niveau2/Untitled.md",
+    "niveau2/Paaseieren.md"
   ]
 }
