adding simple exercises

--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -89,14 +89,14 @@
   "active": "230dc48947620462",
   "lastOpenFiles": [
     "README.md",
+    "variabelen/Rekensom.md",
+    "variabelen/HelloName.md",
+    "variabelen/Untitled.md",
+    "gettingStarted/gettingStarted.md",
     "niveau2/Blokkentoren.md",
-    "niveau2/Clock.md",
     "niveau2/Boodschappenlijst.md",
     "niveau2/GokjeWagen.md",
-    "niveau1/BackgroundGenerator.md",
-    "niveau2/MovingCharacter.md",
-    "niveau2/Filter.md",
-    "niveau2/Untitled.md",
-    "niveau2/Ticketmeester.md"
+    "gettingStarted/images/Screenshot 2021-05-08 at 22.28.37.png",
+    "gettingStarted/images/Screenshot 2021-05-08 at 22.25.36.png"
   ]
 }
