--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -89,14 +89,14 @@
   "active": "230dc48947620462",
   "lastOpenFiles": [
     "README.md",
+    "niveau2/WieVanDeDrie.md",
+    "niveau1/FilmGenerator.md",
+    "niveau2/Blokkentoren.md",
     "variabelen/Rekensom.md",
     "variabelen/HelloName.md",
     "variabelen/Untitled.md",
     "gettingStarted/gettingStarted.md",
-    "niveau2/Blokkentoren.md",
     "niveau2/Boodschappenlijst.md",
-    "niveau2/GokjeWagen.md",
-    "gettingStarted/images/Screenshot 2021-05-08 at 22.28.37.png",
-    "gettingStarted/images/Screenshot 2021-05-08 at 22.25.36.png"
+    "niveau2/GokjeWagen.md"
   ]
 }
