adding array exercises

--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -89,14 +89,14 @@
   "active": "230dc48947620462",
   "lastOpenFiles": [
     "README.md",
-    "dom/Parents.md",
+    "arrays/Pokemon.md",
     "dom/HotItems.md",
+    "dom/Parents.md",
+    "arrays/Untitled.md",
     "dom/Untitled.md",
     "functions/RandomNumber.md",
     "functions/Oppervlakte.md",
     "functions/Untitled.md",
-    "gettingStarted/GettingStarted.md",
-    "variabelen/Rekensom.md",
-    "keuzestructuren/TheNameOfTheGame.md"
+    "gettingStarted/GettingStarted.md"
   ]
 }
