adding loops exercises

--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -89,14 +89,14 @@
   "active": "230dc48947620462",
   "lastOpenFiles": [
     "README.md",
+    "loops/Tafels.md",
+    "loops/Alert.md",
     "arrays/WillekeurigeAfbeelding.md",
-    "arrays/Pokemon.md",
-    "functions/RandomNumber.md",
-    "arrays/images/mozaiek-1.jpeg",
-    "arrays/Mozaiek.md",
-    "arrays/ListigeList.md",
+    "loops/Leeftijd.md",
     "arrays/Untitled.md",
+    "arrays/Pokemon.md",
+    "dom/Parents.md",
     "dom/HotItems.md",
-    "dom/Parents.md"
+    "loops/Untitled.md"
   ]
 }
