--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -89,14 +89,14 @@
   "active": "230dc48947620462",
   "lastOpenFiles": [
     "README.md",
+    "niveau3/Untitled.md",
+    "niveau3/Memory.md",
+    "niveau3/SpaceInvaders.md",
     "events/CookieClicker.md",
     "arrays/WillekeurigeAfbeelding.md",
     "arrays/Pokemon.md",
     "events/Untitled.md",
     "loops/Tafels.md",
-    "loops/Alert.md",
-    "loops/Leeftijd.md",
-    "arrays/Untitled.md",
-    "dom/Parents.md"
+    "loops/Alert.md"
   ]
 }
