--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "niveau1/BusinessKees.md",
+            "file": "README.md",
             "mode": "source"
           }
         }
@@ -68,7 +68,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "niveau1/BusinessKees.md",
+                "file": "README.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -88,6 +88,7 @@
   },
   "active": "230dc48947620462",
   "lastOpenFiles": [
+    "README.md",
     "niveau1/BusinessKees.md",
     "niveau1/BackgroundGenerator.md",
     "niveau1/AskHarrie.md",
@@ -96,7 +97,6 @@
     "niveau1/Untitled.md",
     "keuzestructuren/Spooky.md",
     "keuzestructuren/YouAreOld.md",
-    "keuzestructuren/TheNameOfTheGame.md",
-    "README.md"
+    "keuzestructuren/TheNameOfTheGame.md"
   ]
 }
