--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "README.md",
+            "file": "niveau1/BusinessKees.md",
             "mode": "source"
           }
         }
@@ -68,7 +68,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "README.md",
+                "file": "niveau1/BusinessKees.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -88,8 +88,8 @@
   },
   "active": "230dc48947620462",
   "lastOpenFiles": [
-    "README.md",
     "niveau1/BusinessKees.md",
+    "README.md",
     "niveau1/BackgroundGenerator.md",
     "niveau1/AskHarrie.md",
     "niveau1/FilmGenerator.md",
